allow subscription ui with responsive, login checkbox, dashboard menu in mobile, portal access ui tweaks, loader on header mobile, spacing in equipment details, delivery details and profile settings, zoom effect

--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -75,7 +75,10 @@
       </div>
       <div class="equipment-desc">
         <h3>{{product.Product_name}}</h3>
-        <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span>
+        <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
+
+        <a ng-morph-overlay="allowSubstitution" class="on-hover-pointer">Allow Substitution?</a>
+        
         <p class="qty-head">Quantity</p>
         <ng-form>
         <input class="form-control" type="text"  ng-model="cartData.summary.productsQuantity[product.Product_id].qty" ng-blur="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])">
