--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -2,21 +2,22 @@
   <div class="portal-access-header">
     <div class="container">
       <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3>Account Access</h3>
-            <span class="deactive-link">HOME /</span>
-            <span class="active-link"><a ui-sref="hm.dashboard.main">DASHBOARD</a> /</span>
-            <span class="active-link"> ACCOUNT ACCESS</span>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding my-bottm-line manage_job_tit manage_job_tit_small">
+            Account Access
           </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small text-left-small line-height-small">
+            <a href="#/" class="dash_board_light invoice-no">Home </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <a href="#/dashboard" class="dash_board_light invoice-no">Dashboard </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <span class="dash_board_bold">Account Access</span>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-small"></div>
         </div>
     </div>
   </div>
   <!-- START  Main Content -->
-  <article class="main-cantain">
+  <article>
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-          <h3 class="portal-access">Don't have full access?</h3>
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 leftpadding portal-access-leftpadding">
+          <h3 class="portal-access topmargin">Don't have full access?</h3>
           <p><a target="_blank" href="https://na2.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=44529d52-2355-45d7-bb7f-21532a9fa491">Click here</a> now to fill out our credit application. As a member, you'll receive discounts on rentals up to
 
             60% OFF when compared with other rental companies. You will enjoy 24/7 access to premium on-
@@ -53,7 +54,7 @@
         <!-- START  LOGIN/REGISTER TAB -->
         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
 
-          <h3 class= "portal-access">Already have a credit account with us?</h3>
+          <h3 class= "portal-access topmargin">Already have a credit account with us?</h3>
           <p>If you already have an open credit account with Noble Iron, please contact us in order to receive the
             following credentials to have full access to all our features. </p>
           <p> Give us a call at <a href="tel:1-855-767-4424" class="portal-contact">1-855-767-4424</a>
