--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
-			<ul class="nav nav-tabs gride-tab root-category">
+			<ul class="nav nav-tabs gride-tab root-category profile-setting-category">
 				<li class="active">
 					<a tabtoggle data-toggle="tab" href="#profile-details">Profile Details</a>
 				</li>
@@ -162,7 +162,7 @@
 					<a class="desc-text invoice-no">Change Credentials</a>
 				</div> -->
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profile-setting portal-security-ques">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 profile-setting portal-security-ques">
 					<h3 class="desc-text bold-font">Portal Security Question</h3>
 					<p class="desc-text">Recovery Email: 
 						<input class="form-control" placeholder="Email">
@@ -173,6 +173,8 @@
 					<p class="desc-text">Security Answer:
 						<input class="form-control" placeholder="Answer">
 					</p>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
