--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -19,7 +19,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 procuct_bor_bot text-right go_back noopad_mobile">
           <a ui-sref="hm.search.results({category_id : equipment.Category_Id})"> <i class="fa fa-chevron-left icon-text"></i> Go Back</a>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main leftpadding-small rightpadding-small">
           <div class="col-lg-2 col-md-2 nopadding">
             <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
             <a href="#"><img class="small_product_thumb" src="assets/images/small-product.jpg"></a>
@@ -29,12 +29,17 @@
 
           </div>
           <div class="col-lg-10 col-md-10 product_box nopadding">
-            <p class="mouse_search"><i class="fa fa-search"></i>
+            <!-- web img start -->
+            <p class="mouse_search hidden-sm hidden-xs"><i class="fa fa-search"></i>
               Mouse hover to Zoom</p>
-            <a href="#"><span hm-zoom><img class="img-responsive product-main-img" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt=""></span></a>
+            <a href="#" class="hidden-sm hidden-xs"><span hm-zoom><img class="img-responsive product-main-img" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt=""></span></a>
+            <!-- web img end -->
+            <!-- mobile img start -->
+            <img class="img-responsive product-main-img visible-sm visible-xs" ng-src="{{equipment.Product_Image[0].ProductImage_Path}}" alt="">
+            <!-- mobile img end -->
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main leftpadding-small rightpadding-small">
           <h4 class="productname_tit"><a href="#">{{equipment.Product_Name}}</a></h4>
           <h5 class="procutby">by <span class="procutby_vendor"><a href="#">{{equipment.MAKE}}</a></span></h5>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_dash_botam ten_botam rating-div">
@@ -107,7 +112,7 @@
           <i class="fa fa-spinner fa-spin" ng-show="calculateDeliveryChargesInProgress" ></i>
           <span class="we_can" ng-show="deliveryRateByZipcode && !calculateDeliveryChargesInProgress">We can deliver this item for<span class="we_can_price"> ${{deliveryRateByZipcode}}</span></span>
         </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding-small rightpadding-small">
           <ul class="nav nav-tabs gride-tab">
             <li class="active"><a data-toggle="tab" href="#description" aria-expanded="true">Description</a></li>
             <!--<li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Reviews</a></li>-->
@@ -118,7 +123,7 @@
 
 
           <div id="description" class="tab-pane fade active in">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 leftpadding-small rightpadding-small">
               <h2 class="product_info_tit">Product Information</h2>
               <p class="product_info_p" ng-bind-html="equipment.Product_Specification[0].Specification_Description"></p>
               <!--<p class="product_info_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod-->
@@ -140,7 +145,7 @@
             <!-- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product_pics">
 
             </div> -->
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 need_main equipment-detail-need">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 need_main equipment-detail-need nomargin leftpadding-small rightpadding-small">
               <!-- START  Need Assistance -->
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 need_part">
                 <h2 class="need_title heading-text">Need Assistance?</h2>
