--- a/src/app/jobsites/jobsite-delete.html
+++ b/src/app/jobsites/jobsite-delete.html
@@ -1,16 +1,16 @@
 <div class="row job-header-row">
-  <div class="col-md-12 job-site-header">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-site-header">
     <p>Jobsite<a class="close-cross pull-right"  ng-click="$dismiss()" aria-label="Close"><i class="fa fa-times marker on-hover-pointer"></i></a></p>
   </div>
 </div>
 <div class="row fields-row">
-  <div class="col-md-12 site-col">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-col">
     <p>Are you sure you want to delete this Jobsite</p>
   </div>
 </div>
 
 <div class="row nomargin">
-  <div class="col-md-12 site-col">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-col">
     <button class="btn sign_mybtn all-btn primary-btn pull-right" ng-click="deleteJobSiteConfirm(jobsite)">
       <span btn-load-indicator="Delete:JobSite:Process">Delete</span>
     </button>
