--- a/src/app/jobsites/jobsites.html
+++ b/src/app/jobsites/jobsites.html
@@ -55,7 +55,7 @@
         <button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
       </div>
     </div> -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
       <a ui-sref="hm.dashboard.jobSites.addJobSite" class="btn pull-left manage-job-btn add-job-site-btn sign_mybtn all-btn primary-btn">Add Job Site</a>
       <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : params.listView}" ng-click="toggleListView(true)">List View</button>
