--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -43,7 +43,7 @@
       <button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
     </div>
   </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
     <table class="table quotes-table">
       <thead>
