--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -71,7 +71,7 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-col nopadding hidden-lg hidden-md">
     <div class="cart-for-mobile" ng-repeat="product in data.cart.Product">
       <div class="cart-image-div">
-        <img ng-src="{{product.Product_image}}">
+        <img ng-src="{{product.Product_image}}" err-src>
       </div>
       <div class="equipment-desc">
         <h3>{{product.Product_name}}</h3>
@@ -81,16 +81,16 @@
         
         <p class="qty-head">Quantity</p>
         <ng-form>
-        <input class="form-control" type="text"  ng-model="cartData.summary.productsQuantity[product.Product_id].qty" ng-blur="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])">
+          <input ng-pattern="/[1-9*]+/" class="form-control" ng-model="cartData.summary.productsQuantity[product.Product_id].qty" type="text" ng-change="cartData.summary.productsQuantity[product.Product_id].isDirty = true" ng-blur="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])" >
+          <i class="fa fa-spinner fa-spin" ng-if="cartData.summary.productsQuantity[product.Product_id].updateInProgress" style="position: absolute; margin-top: -32px; right: 25px;" ></i>
         </ng-form>
-        <i class="fa fa-spinner fa-spin" ng-if="cartData.summary.productsQuantity[product.Product_id].updateInProgress"></i>
 
         <!-- <i class="fa fa-map-marker marker"></i>
         <span>Bay Area, Houstan</span>
         <span class="pull-right"><a href="#/update-job-site">Update</a></span> -->
         <p class="sub-total">Sub-Total: &nbsp ${{product.Product_rate}}
           <span class="pull-right">
-            <a ng-click="deleteProductFromCart(product.Product_id)">Delete</a>
+            <a ng-click="deleteProductFromCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])">Delete</a>
           </span>
         </p>
       </div>
