--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -21,21 +21,21 @@
       <p class="desc-text">From Date</p>
       <div class="form-control search-div select-date" ng-click="openDatepicker('from')">
         <input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="from" is-open="queryFormData.from">
-        <i class="fa fa-calendar"></i>
+        <i class="fa fa-calendar pull-right quotation-filter-icon"></i>
       </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
       <p class="desc-text">To Date</p>
       <div class="form-control search-div select-date" ng-click="openDatepicker('to')">
         <input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="to"  is-open="queryFormData.to">
-        <i class="fa fa-calendar"></i>
+        <i class="fa fa-calendar pull-right quotation-filter-icon"></i>
       </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
       <p class="desc-text">Job Site</p>
       <div class="form-control search-div select-date">
         <input type="text" placeholder="Enter Jobsite Keyword" ng-model="jobsite">
-        <i class="fa fa-marker"></i>
+        <i class="fa fa-map-marker pull-right quotation-filter-icon"></i>
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div text-right devider">
