--- a/src/app/cart/allow-substitution.html
+++ b/src/app/cart/allow-substitution.html
@@ -15,7 +15,7 @@
 <div class="row nomargin">
   <div class="col-md-12 site-col">
     <button class="btn sign_mybtn all-btn primary-btn pull-right" ng-click="deleteJobSiteConfirm(jobsite)">
-      <span btn-load-indicator="Delete:JobSite:Process">Delete</span>
+      <span btn-load-indicator="Delete:JobSite:Process">Done</span>
     </button>
     <button class="btn sell-equ all-btn popup-white-btn" ng-click="$dismiss()">Cancel</button>
   </div>
