--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -21,7 +21,7 @@
         <td class="equipment-desc">
           <h3>{{product.Product_name}}</h3>
           <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
-          <a ng-morph-overlay="allowSubstitution" class="on-hover-pointer">Allow Substitution?</a>
+          <a ng-click="allowSubstitution()" class="on-hover-pointer">Allow Substitution?</a>
 
           <ul class="price-ul">
             <li>
@@ -77,8 +77,8 @@
         <h3>{{product.Product_name}}</h3>
         <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
 
-        <a ng-morph-overlay="allowSubstitution" class="on-hover-pointer">Allow Substitution?</a>
-        
+        <a ng-click="allowSubstitution()" class="on-hover-pointer">Allow Substitution?</a>
+
         <p class="qty-head">Quantity</p>
         <ng-form>
           <input ng-pattern="/[1-9*]+/" class="form-control" ng-model="cartData.summary.productsQuantity[product.Product_id].qty" type="text" ng-change="cartData.summary.productsQuantity[product.Product_id].isDirty = true" ng-blur="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])" >
