--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -5,10 +5,12 @@
     Quotation
   </div>
   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit job-site-list">
-    <i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>
-    <i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
-    <div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
-      <input type="text" placeholder="Quote Id">
+    <!--<i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>-->
+    <div ng-show="orders.length">
+      <i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
+      <div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
+        <input type="text" placeholder="Quote Id">
+      </div>
     </div>
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
@@ -44,7 +46,15 @@
     </div>
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+    <div ng-show="flags.ordersFetched && !orders.length" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
+      <h3 class="heading-text cart-empty pull-center">
+        Sorry! No Quotes generated yet.
+      </h3>
+      <button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp;
+        Go back to add products first
+      </button>
+    </div>
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-show="orders.length">
     <table class="table quotes-table">
       <thead>
       <tr>
