--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2554,16 +2554,6 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 	margin-bottom: 15px;
 }
 
-.sentence{
-	margin-bottom: 25px;
-		margin-top: 100px;
-	color: #ddd;
-	font-size: 50px;
-	font-weight: 300;
-	padding-left: 110px;
-	padding-right: 110px;
-}
-
 .slidingVertical{
 	display: inline;
 	text-indent: 8px;
@@ -2923,6 +2913,425 @@ td.quantity .ng-invalid-pattern .error{display:block;}
 .delivery-note-textarea {
 	resize: vertical;
 }
+
+/*landing page*/
+
+.landing-top {
+	background-image: url('/assets/images/landing-cover.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px -240px;
+}
+
+.landing-top-content {
+	background-color: rgba(0,0,0,0.6);
+}
+
+.landing-top-header {
+	background-color: rgba(255,255,255,0.8);
+}
+
+.header-on-scroll {
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+	top: 0;
+	background-color: #fff;
+	box-shadow: 0 1px 5px #000;
+}
+
+.landing-nav>li>a {
+	padding: 31px 0;
+	font-size: 13px;
+	margin: 0 15px;
+	font-weight: 600;
+	color: #000;
+}
+
+.landing-nav>li>a:hover,
+.landing-nav>li>a:focus {
+	background-color: transparent;
+	border-top: 1px solid #009ddc;
+	color: #009ddc;
+}
+
+.landing-icon-bar {
+	background-color: #000;
+}
+
+.search-buy-col .sentence{
+	margin-bottom: 30px;
+	margin-top: 10%;
+	color: #fff;
+	font-size: 35px;
+	font-weight: 600;
+	padding-left: 200px;
+	padding-right: 200px;
+}
+
+.rent-buy-option {
+	text-align: center;
+}
+
+.rent-buy-option a {
+	margin: 0 15px;
+	font-weight: 400;
+	color: #ffffff;
+}
+
+.rent-buy-option a:hover {
+	border-bottom: 2px solid #009ddc;
+	color: #ffffff;
+}
+
+.landing-search:after, .landing-search:before {
+	top: 72.3%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+  right: 33.5%;
+}
+
+.landing-search:after {
+	border-color: rgba(0, 157, 220, 0);
+	border-right-color: #009ddc;
+	border-width: 9px;
+	margin-top: -30px;
+}
+
+.landing-search:before {
+	border-color: rgba(0, 157, 220, 0);
+	border-right-color: #009ddc;
+	border-width: 10px;
+	margin-top: -31px;
+}
+
+.landing-search-div {
+	margin-top: 25px;
+	margin-bottom: 10%;
+}
+
+.landing-search-div input {
+	width: 50%;
+  display: inline-block;
+  height: 50px;
+}
+
+.landing-search-div button {
+	height: 50px;
+	margin-left: -10px;
+	margin-top: -2px;
+}
+
+.landing-search-div button:hover,
+.landing-search-div button:focus {
+	color: #fff;
+}
+
+.most-rented-heading h3 {
+	font-weight: 600;
+	margin-top: 50px;
+}
+
+.most-rented-heading .line {
+	border-bottom: 2px solid #009ddc;
+	width: 50px;
+	display: inline-block;
+	margin-bottom: 25px;
+}
+
+.landing-carousel-control.left,
+.landing-carousel-control.right {
+	background: none;
+	width: auto;
+	display: flex;
+  align-items: center;
+  display: -webkit-flex;
+  -webkit-align-items: center;
+}
+
+.landing-carousel-control i {
+	font-size: 70px;
+	color: #666666;
+	margin-left: -20px;
+	margin-right: -15px;
+}
+
+.most-rented-equip {
+	text-align: center;
+	font-size: 13px;
+	margin-left: 15px;
+	margin-right: 15px;
+	padding: 15px 0;
+	transition: all 0.6s ease;
+	cursor: pointer;
+	border: 1px solid #ededed;
+	margin-bottom: 15px;
+	background-color: #ffffff;
+}
+
+.most-rented-equip:hover {
+	background: #fafafa;
+}
+
+.most-rented-equip p {
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.rented-detail-col {
+	padding: 0;
+	border: 1px solid #ededed;
+	margin-bottom: 30px;
+	background-color: #ffffff;
+}
+
+.rented-detail-left {
+	text-align: center;
+	border-right: 1px solid #ededed;
+	min-height: 300px;
+	padding: 55px 35px 0;
+}
+
+.other-equipment {
+	padding: 15px 0px;
+	margin: 25px 13px 10px;
+	text-align: center;
+	border: 1px solid #ededed;
+}
+
+.most-bought {
+	background: #fafafa;
+}
+
+.repair-heading {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.repair-heading h3 {
+	margin-top: 0;
+}
+
+.repair-heading .line {
+	margin-bottom: 10px;
+}
+
+.repair-heading p {
+	margin-bottom: 25px;
+}
+
+.landing-image {
+	width: 65%;
+	min-width: 320px;
+	max-width: 350px;
+}
+
+.software-img {
+	max-width: 100%;
+}
+
+.address-back {
+	background-image: url('/assets/images/landing-map1.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center 30%;
+}
+
+.address-accordion .panel {
+	background-color: #009ddc;
+	color: #fff;
+	border: none;
+	border-radius: 0;
+}
+
+.address-accordion .panel>.panel-heading {
+	padding: 5px 15px;
+	color: #ffffff;
+}
+
+.address-accordion h4:hover,
+.address-accordion a:focus {
+	color: #ededed;
+	transition: all 0.6s ease;
+}
+
+.address-accordion .panel-body {
+	background-color: #fff;
+	color: #009ddc;
+}
+
+.address-col {
+	padding: 120px 15px;
+}
+
+.footer-section {
+	background-color: #3e3e3e;
+}
+
+.footer-section h4 {
+	color: #009ddc;
+}
+
+.footer-section .line {
+	margin-bottom: 10px;
+}
+
+.footer-section a,
+.footer-section ul li,
+.footer-section p {
+	color: #fff;
+	padding-top: 10px;
+	font-size: 13px;
+}
+
+.footer-section a:first-child,
+.footer-section p:first-child {
+	padding-top: 0;
+}
+
+.footer-section .footer-container {
+	padding: 100px 15px 50px;
+}
+
+.footer-input input {
+	height: 42px;
+	width: 100%;
+}
+
+.footer-input button {
+	height: 42px;
+	width: 100px;
+	margin-top: 15px;
+	margin-left: 0;
+}
+
+.footer-input button:before,
+.footer-input button:after {
+	top: 89.3%;
+	right: 42%;
+}
+
+.main-footer {
+	background-color: #292929;
+	padding: 25px 15px 15px;
+	color: #ffffff;
+}
+
+.main-footer p {
+	margin-bottom: 0;
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .col-lg-4 .abc {
+	background-color: #fafafa;
+	padding: 20px 15px 0;
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .abc p {
+	margin: 0 15px 25px;
+	min-height: 80px;
+}
+
+.testimonial-carousel .multi-item-carousel .item .abc p {
+	margin: 0 15px 25px;
+	min-height: 80px;
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .abc .testimonial-name {
+	background: #009ddc;
+  color: #ffffff;
+  padding: 7px 15px;
+}
+
+.testimonial-carousel .multi-item-carousel .item .abc .testimonial-name {
+	background: #009ddc;
+  color: #ffffff;
+  padding: 7px 15px;
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .abc .testimonial-name p {
+	min-height: auto;
+}
+
+.testimonial-carousel .multi-item-carousel .item .abc .testimonial-name p {
+	min-height: auto;
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .col-lg-4:first-child .abc {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100;White+to+Transparent */
+background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+
+}
+
+.testimonial-carousel .multi-item-carousel .item.active .col-lg-4:last-child .abc {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100;White+to+Transparent */
+background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+
+}
+
+.multi-item-carousel .carousel-inner > .item {
+  -webkit-transition: 0.6s ease-in-out all;
+  transition: 0.6s ease-in-out all;
+}
+.multi-item-carousel .carousel-inner .active.left {
+  left: -33%;
+}
+.multi-item-carousel .carousel-inner .active.right {
+  left: 33%;
+}
+
+.multi-item-carousel .carouse-control.left,
+.multi-item-carousel .carouse-control.right {
+  background-image: none;
+}
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .multi-item-carousel .carousel-inner > .item {
+    -webkit-transition: 0.6s ease-in-out all;
+    transition: 0.6s ease-in-out all;
+    -webkit-backface-visibility: visible;
+    backface-visibility: visible;
+    -webkit-perspective: none;
+    -webkit-transform: none!important;
+    transform: none!important;
+  }
+}
+
+.next-btn {
+	position: absolute;
+	margin-left: 15px;
+	margin-top: -42px;
+	left: 58%;
+	cursor: pointer;
+}
+
+.prev-btn {
+	position: absolute;
+	margin-top: -42px;
+  left: 55%;
+  cursor: pointer;
+}
+
+.next-btn i,
+.prev-btn i {
+	font-size: 35px;
+	padding: 0 15px;
+	background-color: #ffffff;
+}
+
+
+
+
 
 
 
