--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -13,6 +13,62 @@
 	}
 }
 
+@media screen and (min-width: 1200px) {
+	.landing-search:after, .landing-search:before {
+		top: 70.3%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		right: 32%;
+	}
+
+	.landing-search:after {
+		border-color: rgba(0, 157, 220, 0);
+		border-right-color: #009ddc;
+		border-width: 9px;
+		margin-top: -30px;
+	}
+
+	.landing-search:before {
+		border-color: rgba(0, 157, 220, 0);
+		border-right-color: #009ddc;
+		border-width: 10px;
+		margin-top: -31px;
+	}
+
+	.landing-carousel-control i {
+		font-size: 70px;
+		color: #666666;
+	}
+
+	.most-rented-equip {
+		text-align: center;
+		font-size: 13px;
+		margin-left: 15px;
+		margin-right: 15px;
+		padding: 15px 0;
+		transition: all 0.6s ease;
+		cursor: pointer;
+		border: 1px solid #ededed;
+	}
+
+	.most-rented-equip:first-child {
+		margin-left: 35px;
+	}
+
+	.footer-input input {
+		width: 60%;
+	}
+
+	.footer-input button {
+		margin-left: -10px;
+    margin-top: -2px;
+	}
+}
+
 @media screen and (max-width: 980px) {
 	.search_main {
 		padding: 20px 0 92px;
@@ -407,6 +463,69 @@
 	.devider-small {
 		margin-top: 12px;
 	}
+	/*landing responsive*/
+	.landing-logo {
+		width: 60px;
+	}
+
+	.landing-navbar-toggle {
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+
+	.landing-nav>li>a {
+		padding: 3px 0;
+	}
+
+	.landing-nav>li>a:first-child {
+		margin-top: 10px;
+	}
+
+	.landing-search-div input {
+		width: 100%;
+		height: 42px;
+	}
+
+	.landing-search-div button {
+		margin-top: 15px;
+		height: 42px;
+	}
+
+	.search-buy-col .sentence {
+		font-size: 24px;
+	}
+	.footer-input {
+		margin-bottom: 45px;
+	}
+
+	.footer-section .footer-container {
+		padding: 45px 15px 0px;
+	}
+
+	.most-rented-equip {
+		margin-left: 0;
+	}
+
+	.bottom-col {
+		text-align: center;
+	}
+
+	.landing-carousel-control i {
+		display: none;
+	}
+	.repair-heading {
+		padding-top: 45px;
+		padding-bottom: 45px;
+	}
+
+	.address-col {
+		padding: 45px 15px 25px;
+	}
+
+	.landing-top {
+		background-position: 100% 0px !important;
+	}
+
 }
 
 @media screen and (max-width: 600px) {
@@ -1034,6 +1153,52 @@
 	}
 	.header-spinner {
     margin-top: 23px;
+	}
+
+	.search-buy-col .sentence {
+    padding-left: 60px;
+    padding-right: 60px;
+	}
+
+	.landing-search:after, .landing-search:before {
+		top: 71.3%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+	  right: 36%;
+	}
+
+	.landing-search:after {
+		border-color: rgba(0, 157, 220, 0);
+		border-right-color: #009ddc;
+		border-width: 9px;
+		margin-top: -30px;
+	}
+
+	.landing-search:before {
+		border-color: rgba(0, 157, 220, 0);
+		border-right-color: #009ddc;
+		border-width: 10px;
+		margin-top: -31px;
+	}
+	.rented-detail-left {
+		border-right: 0;
+	}
+
+	.other-equipment {
+		margin: 0;
+    border-left: 0;
+    border-right: 0;
+	}
+
+	.view-all-btn {
+		padding: 15px;
+	}
+	.landing-top {
+		background-position: 0px -100px;
 	}
 }
 
