--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -21,7 +21,7 @@
         <td class="equipment-desc">
           <h3>{{product.Product_name}}</h3>
           <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
-          <a ng-click="allowSubstitution()" class="on-hover-pointer">Allow Substitution?</a>
+          <a ng-click="allowSubstitution(product)" class="on-hover-pointer">Allow Substitution?</a>
 
           <ul class="price-ul">
             <li>
@@ -77,7 +77,7 @@
         <h3>{{product.Product_name}}</h3>
         <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
 
-        <a ng-click="allowSubstitution()" class="on-hover-pointer">Allow Substitution?</a>
+        <a ng-click="allowSubstitution(product)" class="on-hover-pointer">Allow Substitution?</a>
 
         <p class="qty-head">Quantity</p>
         <ng-form>
