--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -84,8 +84,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div id="carousel-example-generic" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
-			<!-- Wrapper for slides -->
+		<!-- <div id="carousel-example-generic" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
 					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
@@ -110,7 +109,7 @@
 					</div>
 				</div>
 
-				<!-- <div class="item">
+				<div class="item">
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
 							<p>Scissor Lifts</p>
 						<img src="/assets/images/image_page2.png" alt="most rented pic">
@@ -154,17 +153,61 @@
 							<p>Vehicles & Propane</p>
 						<img src="/assets/images/image_page2.png" alt="most rented pic">
 					</div>
-				</div> -->
+				</div>
 			</div>
-
-			<!-- Controls -->
 			<a class="left carousel-control landing-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
 				<i class="fa fa-angle-left" aria-hidden="true"></i>
 			</a>
 			<a class="right carousel-control landing-carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
 				<i class="fa fa-angle-right" aria-hidden="true"></i>
 			</a>
-		</div>
+		</div> -->
+		<uib-carousel interval="myInterval" no-wrap="noWrapSlides" class="landing-carousel-control">
+      <uib-slide>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Scissor Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Boom Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Backhoes & Attachment Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Mini Excavators</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Vehicles & Propane</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+      </uib-slide>
+      <uib-slide>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Scissor Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Boom Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Backhoes & Attachment Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Mini Excavators</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Vehicles & Propane</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+      </uib-slide>
+    </uib-carousel>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rented-detail-col">
 			<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 rented-detail-left">
 				<h3>Scissor Lifts</h3>
@@ -204,8 +247,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div id="carousel-example-generic1" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
-				<!-- Wrapper for slides -->
+			<!-- <div id="carousel-example-generic1" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding carousel slide" data-ride="carousel">
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
 						<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
@@ -230,7 +272,7 @@
 						</div>
 					</div>
 
-					<!-- <div class="item">
+					<div class="item">
 						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 most-rented-equip">
 								<p>Scissor Lifts</p>
 							<img src="/assets/images/image_page2.png" alt="most rented pic">
@@ -274,17 +316,61 @@
 								<p>Vehicles & Propane</p>
 							<img src="/assets/images/image_page2.png" alt="most rented pic">
 						</div>
-					</div> -->
+					</div>
 				</div>
-
-				<!-- Controls -->
 				<a class="left carousel-control landing-carousel-control" href="#carousel-example-generic1" role="button" data-slide="prev">
 					<i class="fa fa-angle-left" aria-hidden="true"></i>
 				</a>
 				<a class="right carousel-control landing-carousel-control" href="#carousel-example-generic1" role="button" data-slide="next">
 					<i class="fa fa-angle-right" aria-hidden="true"></i>
 				</a>
-			</div>
+			</div> -->
+			<uib-carousel interval="myInterval" no-wrap="noWrapSlides" class="landing-carousel-control">
+      <uib-slide>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Scissor Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Boom Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Backhoes & Attachment Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Mini Excavators</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Vehicles & Propane</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+      </uib-slide>
+      <uib-slide>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Scissor Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Boom Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Backhoes & Attachment Lifts</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Mini Excavators</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 most-rented-equip">
+							<p>Vehicles & Propane</p>
+						<img src="/assets/images/image_page2.png" alt="most rented pic">
+					</div>
+      </uib-slide>
+    </uib-carousel>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 rented-detail-col">
 				<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 rented-detail-left">
 					<h3>Scissor Lifts</h3>
