--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -56,16 +56,29 @@
 							<a href="">RENT</a>
 						</p>
 						<div class="pull-center landing-search-div">
-							<input class="form-control" type="text" placeholder="Search equipment here..."></input>
+              <input type="text" class="form-control search-head-without" name="q" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query"
+                     ng-change="showAutocomplete = true"
+                     ng-model="selectedProduct"
+                     typeahead="item as item.Product_Name for item in getProducts($viewValue)"
+                     typeahead-on-select="selectSearchedItem($item, $model, $label)"
+                     typeahead-template-url="typeahead-item.html"
+                     typeahead-loading="isLoading" ng-class="{'loading-time': isLoading}"/>
+
 							<button class="btn all-btn sign_mybtn landing-search hidden-xs">
-								<i class="fa fa-search"></i>&nbsp
-								Find
-							</button>
+                <span  ng-show="!isLoading">
+                  <i class="fa fa-search"></i>&nbsp
+								    Find
+								</span>
+                <i class="fa fa-spinner fa-spin" ng-hide="!isLoading"></i>
+              </button>
 							<div class="visible-xs">
 								<button class="btn all-btn sign_mybtn">
-									<i class="fa fa-search"></i>&nbsp
-									Find
-								</button>
+                  <span  ng-show="!isLoading">
+                    <i class="fa fa-search"></i>&nbsp
+								    Find
+								  </span>
+                  <i class="fa fa-spinner fa-spin" ng-hide="!isLoading"></i>
+                </button>
 							</div>
 						</div>
 					</div>
